fix vertical align in about block

--- a/css/about.css
+++ b/css/about.css
@@ -65,7 +65,7 @@
 	text-align: center;
 	width: 20vw;
 	margin: 0 1vw;
-
+	vertical-align: top;
 }
 
 #about .feature > div a{
